# backend

./: .env.example  .gitignore  AAPL_price_data_20250529_192804.csv  AAPL_price_data_20250529_192844.csv  AAPL_price_data_20250529_195702.csv  API_GUIDE.md  README.md  env.example  main.py  package-lock.json  package.json  pyproject.toml  test_db_connection.py
backend/: main.py
backend/api/: stock.py
backend/routes/: stock.py
backend/services/: stock_service.py
backend/src/: main.py
backend/templates/: index.html
backend/test/: a.py
backend/utils/: ws_manager.py
fastapi_app/: main.py
fastapi_app/src/: config.py  main.py
fastapi_app/src/database/: connection.py
fastapi_app/src/models/: stock.py
fastapi_app/src/routes/: stock.py
fastapi_app/src/schemas/: stock.py
fastapi_app/src/shcemas/: stock.py
frontend/: index.html
frontend/src/: App.jsx  StockPanel.jsx
frontend/src/components/: ChatPanel.jsx  StockPanel.jsx
frontend/src/pages/: ChartPage.jsx  Home.jsx  StockPage.jsx
livechat/mysite/: settings.py
signup_app3/: auth.py  crud.py  database.py  dependencies.py  kakao.py  main.py  models.py  schemas.py
stock/backend/: chatbot.py  data_service.py  database.py  main.py  models.py  websocket_manager.py  websocket_routes.py
stock/backend/api/: chat.py  stock.py  stock_api.py
stock/backend/auth/: __init__.py  auth_routes.py  auth_service.py  crud.py  dependencies.py  kakao_service.py  models.py  schemas.py
stock/backend/core/: config.py  exceptions.py
stock/backend/database/: __init__.py  connection.py  (+1 more)
stock/frontend/: package-lock.json  package.json
(+44 files in other folders)
