[project]
name = "chat-project"
version = "0.1.0"
description = "Real-time chat using web sockets test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.20",
    "fastapi[standard]>=0.115.12",
    "mysqlclient>=2.2.7",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.55",
]
