[project]
name = "chat-project"
version = "0.1.0"
description = "Real-time chat using web sockets test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "beanie>=1.29.0",
    "cryptography>=44.0.3",
    "databases>=0.9.0",
    "django==4.2.20",
    "fastapi[standard]>=0.115.12",
    "mysqlclient>=2.2.7",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "yfinance>=0.2.55",
]
