[project]
name = "chat-project"
version = "0.1.0"
description = "Real-time chat using web sockets test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "beanie>=1.29.0",
    "cryptography>=44.0.3",
    "databases>=0.9.0",
    "fastapi>=0.115.12",
    "mysqlclient>=2.2.7",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.6",
    "websockets>=15.0.1",
    "websocket-client>=1.8.0",
    "requests>=2.32.3",
    "aiohttp>=3.12.2",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
]
